<?xml version="1.0"?>
<package format="2">
  <name>hw2</name>
  <version>0.0.1</version>
  <description>The hw2 package for ROS transformations.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_msgs</depend>

  <export></export>
</package>
